--- a/recipes/Onion-Rings.html
+++ b/recipes/Onion-Rings.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Onion Rings (spurs-style)</h1>
-    
+    <img src="../images/Onion-Rings.jpeg" alt="Onion Rings">
+
 </body>
 </html>
