Description and Ingredients for Onion-rings added vs code file is a spell checker, ignored "aromat"

--- a/recipes/Onion-Rings.html
+++ b/recipes/Onion-Rings.html
@@ -8,7 +8,21 @@
 </head>
 <body>
     <h1>Onion Rings (spurs-style)</h1>
+
     <img src="../images/Onion-Rings.jpeg" alt="Onion Rings">
+
+    <h2>Description</h2>
+    <p>Rings from an onion usually dipped in batter then fried</p>
+
+    <h2>Ingredients</h2>
+    <ul>
+        <li>2 onions sliced into rings</li>
+        <li>1 1/2 cups soda water or sprite</li>
+        <li>1 cup flour</li>
+        <li>2 tsp aromat(or add salt)</li>
+        <li>2 tsp steers salt</li>
+        <li>1/2 tsp pepper powder</li>
+    </ul>
 
 </body>
 </html>
