--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
 
     <a href="recipes/Onion-Rings.html">Onion-Rings (spurs-style)</a>
+
+    <a href="../odin-recipes/recipes/chocolate-chip-cookies.html">The Best Chocolate Chip Cookies</a>
 
 </body>
 </html>
