Add choco chip cookie description and ingredients

--- a/recipes/chocolate-chip-cookies.html
+++ b/recipes/chocolate-chip-cookies.html
@@ -8,10 +8,26 @@
 </head>
 <body>
     <h1>The Best Chocolate Chip Cookies</h1>
-    
+
     <img src="../images/cookies.jpeg" alt="Chocolate chip cookies">
 
+    <h2>Description</h2>
+    <p>Baked dough with chocolate chips</p>
 
+    <h2>Ingredients</h2>
+    <ul>
+        <li>1 cup butter, softened
+        <li>1 cup white sugar
+        <li>1 cup packed brown sugar
+        <li>2 eggs
+        <li>2 teaspoons vanilla extract
+        <li>1 teaspoon baking soda
+        <li>2 teaspoons hot water
+        <li>½ teaspoon salt
+        <li>3 cups all-purpose flour
+        <li>2 cups semisweet chocolate chips
+        <li>1 cup chopped walnuts
+    </ul>
     
 </body>
 </html>
