--- a/recipes/basic-mashed-potatoes.html
+++ b/recipes/basic-mashed-potatoes.html
@@ -7,6 +7,14 @@
     <title>Mashed Potatoes</title>
 </head>
 <body>
+    <h1>Basic Mashed Potatoes</h1>
+
+    <img src="../images/Mashed-potatoes.jpeg" alt="Mashed potatoes">
+
+    <h2>Description</h2>
+    <p>when potatoes get absolutely smashed, pretty self explanatory</p>
+
+
     
 </body>
 </html>
