Add mash potatoes ul ingredients and link to index

--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
 
     <a href="../odin-recipes/recipes/chocolate-chip-cookies.html">The Best Chocolate Chip Cookies</a>
 
+    <a href="../odin-recipes/recipes/basic-mashed-potatoes.html">Simple (but delicious) Mashed Potatoes</a>
+
 </body>
 </html>
