--- a/recipes/basic-mashed-potatoes.html
+++ b/recipes/basic-mashed-potatoes.html
@@ -14,7 +14,13 @@
     <h2>Description</h2>
     <p>when potatoes get absolutely smashed, pretty self explanatory</p>
 
+    <h2>Ingredients</h2>
+    <ul>
+        <li>2 pounds baking potatoes, peeled and quartered</li>
+        <li>2 tablespoons butter</li>
+        <li>1 cup milk</li>
+        <li>salt and pepper to taste</li>
+    </ul>
 
-    
 </body>
 </html>
