--- a/recipes/basic-mashed-potatoes.html
+++ b/recipes/basic-mashed-potatoes.html
@@ -22,5 +22,11 @@
         <li>salt and pepper to taste</li>
     </ul>
 
+    <h2>Steps</h2>
+    <ol>
+        <li>Bring a pot of salted water to a boil. Add potatoes and cook until tender but still firm, about 15 minutes; drain.</li>
+        <li>In a small saucepan heat butter and milk over low heat until butter is melted. Using a potato masher or electric beater, slowly blend milk mixture into potatoes until smooth and creamy. Season with salt and pepper to taste.</li>
+    </ol>
+
 </body>
 </html>
