Put index link in a list
so that they're not all on one line

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <ul>
+    <li><a href="recipes/Onion-Rings.html">Onion-Rings (spurs-style)</a></li>
 
-    <a href="recipes/Onion-Rings.html">Onion-Rings (spurs-style)</a>
+    <li><a href="../odin-recipes/recipes/chocolate-chip-cookies.html">The Best Chocolate Chip Cookies</a></li>
 
-    <a href="../odin-recipes/recipes/chocolate-chip-cookies.html">The Best Chocolate Chip Cookies</a>
-
-    <a href="../odin-recipes/recipes/basic-mashed-potatoes.html">Simple (but delicious) Mashed Potatoes</a>
-
+    <li><a href="../odin-recipes/recipes/basic-mashed-potatoes.html">Simple (but delicious) Mashed Potatoes</a></li>
+    </ul>
 </body>
 </html>
