--- a/recipes/Onion-Rings.html
+++ b/recipes/Onion-Rings.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Onion Rings (spurs-style)</h1>
 
-    <img src="../images/Onion-Rings.jpeg" alt="Onion Rings">
+    <img src="../images/Onion-Rings.jpeg" alt="Onion Rings" style="width:400px;height:300px">
 
     <h2>Description</h2>
     <p>Rings from an onion usually dipped in batter then fried</p>
