--- a/recipes/chocolate-chip-cookies.html
+++ b/recipes/chocolate-chip-cookies.html
@@ -9,7 +9,7 @@
 <body>
     <h1>The Best Chocolate Chip Cookies</h1>
 
-    <img src="../images/cookies.jpeg" alt="Chocolate chip cookies">
+    <img src="../images/cookies.jpeg" alt="Chocolate chip cookies" style="width:400px;height:300px">
 
     <h2>Description</h2>
     <p>Baked dough with chocolate chips</p>
