--- a/recipes/basic-mashed-potatoes.html
+++ b/recipes/basic-mashed-potatoes.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Basic Mashed Potatoes</h1>
 
-    <img src="../images/Mashed-potatoes.jpeg" alt="Mashed potatoes" style="width:400px;height:300px">
+    <img src="../images/Mashed-potatoes.jpeg" alt="Mashed potatoes" style="width:500px;height:auto">
 
     <h2>Description</h2>
     <p>when potatoes get absolutely smashed, pretty self explanatory</p>
