--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
     <title>Home</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-    <li><a href="recipes/Onion-Rings.html">Onion-Rings (spurs-style)</a></li>
+    <h1 class="header">Odin Recipes</h1>
+    <div class="wrapper">
+        <ul>
+        <li><a href="recipes/Onion-Rings.html">Onion-Rings (spurs-style)</a></li>
 
-    <li><a href="../odin-recipes/recipes/chocolate-chip-cookies.html">The Best Chocolate Chip Cookies</a></li>
+        <li><a href="../odin-recipes/recipes/chocolate-chip-cookies.html">The Best Chocolate Chip Cookies</a></li>
 
-    <li><a href="../odin-recipes/recipes/basic-mashed-potatoes.html">Simple (but delicious) Mashed Potatoes</a></li>
-    </ul>
+        <li><a href="../odin-recipes/recipes/basic-mashed-potatoes.html">Simple (but delicious) Mashed Potatoes</a></li>
+        </ul>
+    </div>
 </body>
 </html>
