--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Home</title>
 </head>
 <body>
-    <h1 class="header">Odin Recipes</h1>
+    <h1>Odin Recipes</h1>
     <div class="wrapper">
         <ul>
         <li><a href="recipes/Onion-Rings.html">Onion-Rings (spurs-style)</a></li>
