--- a/recipes/Onion-Rings.html
+++ b/recipes/Onion-Rings.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Onion Rings (spurs-style)</h1>
+    <div class="wrapper">
 
     <img src="../images/Onion-Rings.jpeg" alt="Onion Rings" style="width:550px;height:auto">
 
@@ -35,6 +36,7 @@
         <li>Dip the onion slices into the flour mixture until they are all coated; set aside. Whisk the egg and milk into the flour mixture using a fork. Dip the floured rings into the batter to coat, then place on a wire rack to drain until the batter stops dripping. The wire rack may be placed over a sheet of aluminum foil for easier clean up. Spread the bread crumbs out on a plate or shallow dish. Place rings one at a time into the crumbs, and scoop the crumbs up over the ring to coat. Give it a hard tap as you remove it from the crumbs. The coating should cling very well. Repeat with remaining rings.</li>
         <li>Deep fry the rings a few at a time for 2 to 3 minutes, or until golden brown. Remove to paper towels to drain. Season with seasoning salt, and serve.</li>
     </ol>
+    </div>
 
 </body>
 </html>
