--- a/recipes/basic-mashed-potatoes.html
+++ b/recipes/basic-mashed-potatoes.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Basic Mashed Potatoes</h1>
+    <div class="wrapper">
 
     <img src="../images/Mashed-potatoes.jpeg" alt="Mashed potatoes" style="width:500px;height:auto">
 
@@ -28,6 +29,7 @@
         <li>Bring a pot of salted water to a boil. Add potatoes and cook until tender but still firm, about 15 minutes; drain.</li>
         <li>In a small saucepan heat butter and milk over low heat until butter is melted. Using a potato masher or electric beater, slowly blend milk mixture into potatoes until smooth and creamy. Season with salt and pepper to taste.</li>
     </ol>
+    </div>
 
 </body>
 </html>
