--- a/recipes/chocolate-chip-cookies.html
+++ b/recipes/chocolate-chip-cookies.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>The Best Chocolate Chip Cookies</h1>
+    <div class="wrapper">
 
     <img src="../images/cookies.jpeg" alt="Chocolate chip cookies" style="width:350px;height:auto">
 
@@ -36,6 +37,7 @@
         <li>Cream together the butter, white sugar, and brown sugar until smooth. Beat in the eggs one at a time, then stir in the vanilla. Dissolve baking soda in hot water. Add to batter along with salt. Stir in flour, chocolate chips, and nuts. Drop by large spoonfuls onto ungreased pans.</li>
         <li>Bake for about 10 minutes in the preheated oven, or until edges are nicely browned.</li>
     </ol>
+    </div>
 
 </body>
 </html>
